Remove systemProperties from configuration in pom.xml
This is no longer necessary, because we do not need that much memory anymore